[gd_scene load_steps=2 format=3 uid="uid://c21tp71gdx0e5"]

[ext_resource type="Script" uid="uid://c336fxt1uogva" path="res://NPCs/Mobs/pulsing_mob.gd" id="1_e0211"]

[node name="PulsingMob" type="CharacterBody2D"]
collision_layer = 32
motion_mode = 1
script = ExtResource("1_e0211")
move_mode = 3
metadata/_custom_type_script = "uid://dxjjq6v3w8ybe"

[node name="PulseTimer" type="Timer" parent="."]
one_shot = true

[node name="RecedeTimer" type="Timer" parent="."]
one_shot = true

[node name="PulseArea" type="Area2D" parent="."]
collision_layer = 32

[node name="RecedeArea" type="Area2D" parent="."]
collision_layer = 32

[node name="PulseSprite" type="Sprite2D" parent="."]

[node name="RecedeSprite" type="Sprite2D" parent="."]

[connection signal="timeout" from="PulseTimer" to="." method="_on_pulse_timer_timeout"]
[connection signal="timeout" from="RecedeTimer" to="." method="_on_recede_timer_timeout"]
